# code-names-bot-text-graph

./: .gitignore  README.md  config.py  pyproject.toml  tasks.py
code_names_bot_text_graph/consec/: base_dataset.py  consec_dataset.py  disambiguation_instance.py  pl_modules.py  sense_extractor.py  sense_extractors.py  tokenizer.py  utils.py
code_names_bot_text_graph/consec_old/: consec_dataset.py  consec_tokenizer.py  disambiguation_corpora.py  sense_extractors.py
code_names_bot_text_graph/disambiguator/: baseline_disambiguator.py  consec_disambiguator.py  consec_disambiguator_old.py  disambiguator.py
code_names_bot_text_graph/evaluation/: evaluate.py  evaluate_sem_link_disambiguation.py  evaluate_synonym_disambiguation.py  evaluate_synonyms.py  evaluate_text_disambiguation.py
code_names_bot_text_graph/labeler/: labeler.py  labeler_window.py  sem_link_labeler.py  sem_link_labeler_window.py  synonym_labeler.py  synonym_labeler_window.py  text_labeler.py  text_labeler_window.py
code_names_bot_text_graph/sem_link_disambiguator/: baseline_sem_link_disambiguator.py  consec_sem_link_disambiguator.py  create_domain_class_to_sense.py  dict_sem_link_disambiguator.py  mixed_sem_link_disambiguator.py  sem_link_disambiguator.py  sem_link_sense_proposer.py
code_names_bot_text_graph/semantic_disambiguator/: baseline_synonym_disambiguator.py  consec_semantic_disambiguator.py  semantic_disambiguator.py  synonym_disambiguator.py  synonym_sense_proposer.py
code_names_bot_text_graph/sense_inventory/: create_sense_inventory.py  sense_inventory.py
code_names_bot_text_graph/sense_proposal/: create_lemma_sense_map.py  create_sense_inventory.py  propose_senses.py  sense_proposer.py
code_names_bot_text_graph/synonym_disambiguator/: synonym_disambiguator.py
code_names_bot_text_graph/synonym_labeler/: synonym_labeler.py  synonym_labeler_window.py
code_names_bot_text_graph/text_disambiguator/: baseline_text_disambiguator.py  consec_compound_text_disambiguator.py  consec_text_disambiguator.py  consec_text_disambiguator_old.py  text_disambiguator.py  text_sense_proposer.py
code_names_bot_text_graph/text_extraction/: extract_texts.py
code_names_bot_text_graph/text_graph_creator/: combine_text_senses.py  create_text_graph.py  disambiguate_texts.py
code_names_bot_text_graph/token_tagger/: token_tagger.py
output/: class_labels.json  domain_labels.json  sem_link_sense_labels.json  synonym_labels.json  text_sense_labels.json
output/text_sense_batches/: batch_41.json  batch_46.json  batch_51.json  batch_56.json  text_senses.json
tests/: test_consec.py  test_consec_old.py  test_sense_proposer.py  test_spacy.py
tools/: list_domains_classes.py  print_profile.py  set_labels.py
