[tool.poetry]
name = "code-names-bot-text-graph"
version = "0.1.0"
description = ""
authors = ["Nalu Zou"]
readme = "README.md"
packages = [{include = "code_names_bot_text_graph"}]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
black = "^22.8.0"
isort = "^5.10.1"
PyYAML = "^6.0"
spacy = "^3.4.1"
PySide6 = "^6.3.2"
pytorch-lightning = "^1.7.7"
transformers = "^4.23.1"

[tool.poetry.scripts]
setup                                   = "tasks:setup"
format                                  = "tasks:format"

test-sense-proposer                     = "tests.test_sense_proposer:main"
test-spacy                              = "tests.test_spacy:main"
test-consec                             = "tests.test_consec:main"
test-consec-old                         = "tests.test_consec_old:main"

extract-texts                           = "code_names_bot_text_graph.text_extraction.extract_texts:main"
create-sense-inventory                  = "code_names_bot_text_graph.sense_proposal.create_sense_inventory:main"

labeler                                 = "code_names_bot_text_graph.labeler.labeler:main"
evaluate                                = "code_names_bot_text_graph.evaluation.evaluate:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
