[tool.poetry]
name = "code-names-bot-text-graph"
version = "0.1.0"
description = ""
authors = ["Nalu Zou"]
readme = "README.md"
packages = [{include = "code_names_bot_text_graph"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
black = "^22.8.0"
isort = "^5.10.1"
spacy = "^3.4.1"
PySide6 = "^6.3.2"
pytorch-lightning = "^1.7.7"
transformers = "^4.23.1"

[tool.poetry.scripts]
setup                                   = "tasks:setup"
format                                  = "tasks:format"

test-sense-proposer                     = "tests.test_sense_proposer:main"
test-spacy                              = "tests.test_spacy:main"
test-consec                             = "tests.test_consec:main"
test-consec-old                         = "tests.test_consec_old:main"

list-domain-classes                     = "tools.list_domains_classes:main"
set-labels                              = "tools.set_labels:main"
print-profile                           = "tools.print_profile:main"

extract-texts                           = "code_names_bot_text_graph.text_extraction.extract_texts:main"
create-sense-inventory                  = "code_names_bot_text_graph.sense_inventory.create_sense_inventory:main"
create-domain-class-to-sense            = "code_names_bot_text_graph.sem_link_disambiguator.create_domain_class_to_sense:main"
disambiguate-texts                      = "code_names_bot_text_graph.text_graph_creator.disambiguate_texts:main"
create-text-graph                       = "code_names_bot_text_graph.text_graph_creator.create_text_graph:main"

text-labeler                            = "code_names_bot_text_graph.labeler.text_labeler:main"
domain-labeler                          = "code_names_bot_text_graph.labeler.sem_link_labeler:label_domains"
class-labeler                           = "code_names_bot_text_graph.labeler.sem_link_labeler:label_classes"
synonym-labeler                         = "code_names_bot_text_graph.labeler.synonym_labeler:main"
eval-text-disambiguation                = "code_names_bot_text_graph.evaluation.evaluate_text_disambiguation:main"
eval-sem-link-disambiguation            = "code_names_bot_text_graph.evaluation.evaluate_sem_link_disambiguation:main"
eval-synonym-disambiguation             = "code_names_bot_text_graph.evaluation.evaluate_synonym_disambiguation:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
